# libmemalloc

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Dockerfile  README.md  REUSE.toml  SECURITY.md  annotated.html  annotated_dup.js  build.sh  classes.html  coverage-link.js  dir_000002_000001.html  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  doc.sh  doxygen_8md.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  (+75 more)
.githooks/: commit-msg  post-checkout  post-commit  post-merge  post-tag  pre-commit  pre-push  pre-rebase  prepare-commit-msg
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  docs_issue.md  docs_issue.yml  feature_request.md  feature_request.yml  question_help.md  question_help.yml
.github/workflows/: c-build.yml  c-code-style-check.yml  c-cpp.yml  docker-image.yml  docs.yml  page.yml
coverage/: coverage.xml  index.functions.html  index.html  index.libmemalloc.c.bb0d7800799687135f75dfb5b780a7d0.html  index.logs.h.2dab0976d5f2b6defe72688e02416228.html  index.test_double_free.c.7c9f3b4fad2411f7a032cf06dce38540.html  index.test_free_reuse.c.f5f0299e8755fb5da45c1c65d5be7cbe.html  index.test_graph.c.bc9a8852d75e972a3b90c5ab0939c898.html  index.test_internal_fragmentation.c.47f7ffe2b877627acc4f08f073701d25.html  index.test_linked_list.c.5c5fcf8dbac32126442ce6333831f853.html  index.test_max_heap.c.4ccdec48f489466f5bc52016ffbc410a.html  index.test_memalloc.c.f530346754412d780db80f248055b3b7.html  index.test_multi_strategy.c.1ca0a2d38c55122aa33a93cf37fc18b5.html  index.test_realloc.c.13ecec62d42b7b5864beb71e51a51acd.html
docker/: .dockerignore  .hadolint.yaml  .trivyignore  Dockerfile  dockle.toml  grype.yaml  syft.yaml  trivy.yaml
doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  doxygen.md
doxygen/coverage_link/: coverage-link.js  coverage-pill.css  footer.html
inc/: libmemalloc.h  logs.h  memalloc_utils.h
scripts/: bootstrap.sh  build.sh  docker-check.sh  docker_cleanup.sh  security_check.sh  style_check.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_7.js  defines_8.js  defines_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_1.js  files_2.js  functions_0.js  functions_1.js  groups_0.js  pages_0.js  (+14 more)
src/: CMakeLists.txt  gc.c  libmemalloc.c
tests/: CMakeLists.txt  test_double_free.c  test_free_reuse.c  test_garbage_collector.c  test_gc.c  test_graph.c  test_internal_fragmentation.c  test_linked_list.c  test_max_heap.c  test_memalloc.c  test_multi_strategy.c  test_realloc.c  teste_realloc.c
